k8s/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8096
  - name: https
    port: 443
    targetPort: 8920
  selector:
    app: jellyfin
